@@ -1,3 +1,5 @@
+* #2327 Unescape the URI to display it in the address bar (marco)
+
 45
 
 * use json for storing the history and the shared
